[package]
name = "dvctree"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
relative-path = { version="^1.7", features=["serde"] }
thiserror = "^1.0"
log = "^0.4"
text-template = "^0.1"
